force-app/main/default/objects/Interaction__c/fields/Transcript_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Notes__c</fullName>
    <label>Transcript/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>